Table unica_transactions.transacoes {
    id uuid [pk]
    data_transacao timestamp
    horario_transacao varchar(6)
    tipo_lancamento varchar(20)
    data_lancamento date
    valor_bruto_venda decimal(15,2)
    valor_liquido_venda decimal(15,2)
    valor_desconto decimal(15,2)
    tipo_produto varchar(1)
    meio_captura varchar(1)
    tipo_transacao varchar(2)
    codigo_bandeira varchar(3)
    codigo_produto varchar(3)
    identificacao_loja varchar(15)
    nsu_host_transacao varchar(12)
    numero_cartao varchar(19)
    numero_parcela varchar(2)
    numero_total_parcelas varchar(2)
    nsu_host_parcela varchar(12)
    valor_bruto_parcela decimal(15,2)
    valor_desconto_parcela decimal(15,2)
    valor_liquido_parcela decimal(15,2)
    banco varchar(3)
    agencia varchar(6)
    conta varchar(11)
    codigo_autorizacao varchar(12)
    valor_tx_interchange_tarifa decimal(15,2)
    valor_tx_administracao decimal(15,2)
    valor_tx_interchange_parcela decimal(15,2)
    valor_tx_administracao_parcela decimal(15,2)
    valor_redutor_multi_fronteira decimal(15,2)
    valor_tx_antecipacao decimal(15,2)
    valor_liquido_antecipado decimal(15,2)
    codigo_pedido varchar(30)
    sigla_pais varchar(3)
    data_vencimento_original date
    indicador_deb_balance varchar(1)
    indicador_reenvio varchar(1)
    nsu_origem varchar(6)
    numero_operacao_recebivel varchar(20)
    sequencial_operacao_recebivel varchar(2)
    tipo_operacao_recebivel varchar(1)
    valor_operacao_recebivel decimal(15,2)
    file_id uuid
    created_at timestamp
    updated_at timestamp
}

Table unica_transactions.loja {
    id uuid [pk]
    identificacao_loja varchar [unique]
    codigo_ec_venda varchar
    codigo_ec_pagamento varchar
    cnpj_ec_pagamento varchar
    created_at timestamp
    updated_at timestamp
}

Table unica_transactions.produto {
    id uuid [pk]
    codigo_produto varchar [unique]
    descricao varchar
    created_at timestamp
    updated_at timestamp
}

Table unica_transactions.pagamento {
    id uuid [pk]
    codigo_bandeira varchar [unique]
    tipo_pagamento varchar
    created_at timestamp
    updated_at timestamp
}

Table unica_transactions.tempo {
    id uuid [pk]
    data date [unique]
    dia_semana varchar
    mes int
    ano int
    created_at timestamp
    updated_at timestamp
}

Table unica_transactions.controle_arquivos {
    id uuid [pk]
    nome_arquivo varchar [unique]
    data_geracao date
    data_processamento timestamp
    status_processamento varchar(20)
    erro_processamento text
    arquivo_google_drive_path varchar(255)
    created_at timestamp
    updated_at timestamp
}

Ref: unica_transactions.transacoes.identificacao_loja > unica_transactions.loja.identificacao_loja
Ref: unica_transactions.transacoes.codigo_produto > unica_transactions.produto.codigo_produto
Ref: unica_transactions.transacoes.codigo_bandeira > unica_transactions.pagamento.codigo_bandeira
Ref: unica_transactions.transacoes.file_id > unica_transactions.controle_arquivos.id
